--- a/index.yaml
+++ b/index.yaml
@@ -50,7 +50,7 @@ entries:
     created: "2025-11-19T13:00:41.917689532Z"
     dependencies:
     - name: library-chart
-      repository: https://github.com/AhmedErrahmani/onyxia-services-helm-charts/
+      repository: https://inseefrlab.github.io/helm-charts-interactive-services
       version: 1.7.14
     description: The JupyterLab IDE with Python and a collection of standard data
       science packages.
@@ -66,4 +66,4 @@ entries:
     type: application
     urls:
     - https://github.com/AhmedErrahmani/onyxia-services-helm-charts/releases/download/jupyter-pysyft0.9.6beta-6/jupyter-pysyft0.9.6beta-6.tgz
-    version: 2.3.25
+    version: latest
