--- a/index.yaml
+++ b/index.yaml
@@ -65,7 +65,7 @@ entries:
     type: application
     urls:
     - https://github.com/AhmedErrahmani/onyxia-services-helm-charts/releases/download/jupyter-pysyft0.9.6beta-6/jupyter-pysyft0.9.6beta-6.tgz
-    version: 1.0.0
+    version: latest
   library-chart:
   - apiVersion: v2
     created: "2025-12-09T22:21:45.053736476Z"
